Add custom stork scenario